syntax = "proto3";

package proto

option go_package = "pkg/proto;proto";

service Server {
    rpc BroadCast(ClientText) returns (ServerText) {}
}

message ClientText {
    string text = 1;
}

message ServerText {
    string response = 1;
}
